--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Small lib of Finance Formulas",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "mocha"
   },
   "keywords": [
     "finance",
@@ -12,5 +12,8 @@
   ],
   "author": "Anis Tayebali",
   "license": "ISC",
-  "dependencies": {}
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.1.0"
+  }
 }
